--- a/fileFishDetail.html
+++ b/fileFishDetail.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Filefish</title>
-<link rel="stylesheet" href="style.css">
-</head>
-​
+    <head>
+        <title>Filefish</title>
+        <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+
+        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+        <script src="fishTank.js"></script>
+    </head>
+
 <body class="detail">
     <div class="container">
         <img id="detailBanner" src="https://cdn.theatlantic.com/thumbor/cE9W6XBmyMfXOaHAs_dMYWVtZrI=/0x100:3456x2044/960x540/media/img/2014/05/shutterstock_141051217/original.jpg">
@@ -27,9 +31,4 @@
         Other names: Foolfish, Leatherjackers, Shingles  
     </p>
 </body>
-​<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-<script src="fishTank.js"></script>
 </html>
-
-<!--<img src="images/clownFishIcon.png" class="circleImage">-->
-​
