--- a/index.html
+++ b/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body class="index">
+    <head>
+        <title>Fish Tank</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<h1 class="mainTitle">St. John's Fish Tank</h1>
+    <body class="index">
 
-<!-- Layton addition-->
-<h2 class="subTitle"> Please click on an image of a fish to learn more about it </h2>
+        <h1 class="mainTitle">St. John's Fish Tank</h1>
+
+        <!-- Layton addition-->
+        <h2 class="subTitle"> Please click on an image of a fish to learn more about it </h2>
 
 
-<a href="clownFishDetail.html">
-<img class="icon" src="images/clownFishIcon.png" id="clownFish" >
-</a>
+        <a href="clownFishDetail.html">
+        <img class="icon" src="images/clownFishIcon.png" id="clownFish" >
+        </a>
 
-<a href="blueTangFishDetail.html">
-<img class="icon" src="images/blueTangFishIcon.png" id="blueTangFish">
-</a>
+        <a href="blueTangFishDetail.html">
+        <img class="icon" src="images/blueTangFishIcon.png" id="blueTangFish">
+        </a>
 
-<a href="yellowTangFishDetail.html">
-<img class="icon" src="images/yellowTangFishIcon.png" id="yellowTangFish">
-</a>
+        <a href="yellowTangFishDetail.html">
+        <img class="icon" src="images/yellowTangFishIcon.png" id="yellowTangFish">
+        </a>
 
-<a href="bicolorFoxface.html">
-<img class="icon" src="images/bicolorFoxfaceFishIcon.png" id="bicolorFoxfaceFish">
-</a>
+        <a href="bicolorFoxface.html">
+        <img class="icon" src="images/bicolorFoxfaceFishIcon.png" id="bicolorFoxfaceFish">
+        </a>
 
-<a href="coralBeautyFishDetail.html">
-<img class ="icon" src="images/coralBeautyFishIcon.png" id="coralBeautyFish">
-</a>    
+        <a href="coralBeautyFishDetail.html">
+        <img class ="icon" src="images/coralBeautyFishIcon.png" id="coralBeautyFish">
+        </a>
 
-<a href="orchidDottybackFishDetail.html">
-<img class ="icon" src="images/orchidDottybackFishIcon.png" id="orchidDottybackFish">
-</a>   
+        <a href="orchidDottybackFishDetail.html">
+        <img class ="icon" src="images/orchidDottybackFishIcon.png" id="orchidDottybackFish">
+        </a>
 
-<a href="astraeaTurboSnailDetail.html">
-<img class ="icon" src="images/astraeaTurboSnailIcon.png" id="astraeaTurboSnail">
-</a> 
+        <a href="astraeaTurboSnailDetail.html">
+        <img class ="icon" src="images/astraeaTurboSnailIcon.png" id="astraeaTurboSnail">
+        </a>
 
-<a href="indigoDottybackFishDetail.html">
-<img class ="icon" src="images/indigoDottybackFishIcon.png" id="indigoDottybackFish">
-</a> 
+        <a href="indigoDottybackFishDetail.html">
+        <img class ="icon" src="images/indigoDottybackFishIcon.png" id="indigoDottybackFish">
+        </a>
 
-</body>
+    </body>
 
-<script>
-
-</script>
 </html>
