--- a/orchidDottybackFishDetail.html
+++ b/orchidDottybackFishDetail.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Orchid Dottyback</title>
-<link rel="stylesheet" href="style.css">
-</head>
-​
-<body class="detail">
-    <div class="container">
-        <img id="detailBanner" src="images/orchidDottybackFishBanner.jpg">
-            <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-            <h1 id="detailTitle" class="lowVisibility">Orchid Dottyback Fish</h1>
-            <img id="fishImg" ondblclick="toggle3d()" src="images/orchidDottybackFishIcon.png" class="circleImage">
-            <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/orchidDottybackFishModel.glb" ar poster="images/orchidDottybackFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
-            <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
-            </div>
-    <p class="description">
-        Common Name: Orchid Dottyback<br>
-        Scientific Name: Pseudochromis fridamani<br>
-        Adult Size: 3 inches<br>
-        Habitat: Indian Ocean and Red Sea<br>
-        Behavior: Semi-Agressive<br>
-        Lifespan: 3-5 Years<br>
-        Diet: Carnivore<br>
-        Reproduction: External fertilization with the male guarding the eggs<br>
-        Cool Facts: Females can chnage their sex to male, but not the other way<br>
-        Other names: Fridman's Dottyback   
-    </p>
-</body>
-​<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-<script src="fishTank.js"></script>
-</html>
+    <head>
+        <title>Orchid Dottyback</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
 
-<!--<img src="images/clownFishIcon.png" class="circleImage">-->
-​
+        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+        <script src="fishTank.js"></script>
+    </head>
+    
+    <body class="detail">
+        <div class="container">
+            <img id="detailBanner" src="images/orchidDottybackFishBanner.jpg">
+                <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
+                <h1 id="detailTitle" class="lowVisibility">Orchid Dottyback Fish</h1>
+                <img id="fishImg" ondblclick="toggle3d()" src="images/orchidDottybackFishIcon.png" class="circleImage">
+                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/orchidDottybackFishModel.glb" ar poster="images/orchidDottybackFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+                <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
+                </div>
+        <p class="description">
+            Common Name: Orchid Dottyback<br>
+            Scientific Name: Pseudochromis fridamani<br>
+            Adult Size: 3 inches<br>
+            Habitat: Indian Ocean and Red Sea<br>
+            Behavior: Semi-Agressive<br>
+            Lifespan: 3-5 Years<br>
+            Diet: Carnivore<br>
+            Reproduction: External fertilization with the male guarding the eggs<br>
+            Cool Facts: Females can chnage their sex to male, but not the other way<br>
+            Other names: Fridman's Dottyback   
+        </p>
+    </body>
+</html>
