--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body class="index">
+    <body class="index" style="background-image: url('images/oceanBg.jpg');">
 
         <h1 class="mainTitle">St. John's Fish Tank</h1>
 
