--- a/bicolorFoxface.html
+++ b/bicolorFoxface.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/bicolorFoxfaceFishBanner.jpeg">
+            <img id="detailBanner" src="images/bicolorFoxfaceFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Bicolor Foxface</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/bicolorFoxfaceFishIcon.png" class="circleImage">
