--- a/blueTangFishDetail.html
+++ b/blueTangFishDetail.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/blueTangFishBanner.webp">
+            <img id="detailBanner" src="images/blueTangFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Blue Hippo Tang Fish</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/blueTangFishIcon.png" class="circleImage">
