--- a/clownFishDetail.html
+++ b/clownFishDetail.html
@@ -10,7 +10,7 @@
     
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/clownFishBanner.webp">
+            <img id="detailBanner" src="images/clownFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Clown Fish</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/clownFishIcon.png" class="circleImage">
