JPG VS JPEG BATTLE
ima cry

--- a/coralBeautyFishDetail.html
+++ b/coralBeautyFishDetail.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/coralBeautyFishBanner.jpeg">
+            <img id="detailBanner" src="images/coralBeautyFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Coral Beauty Angelfish</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/coralBeautyFishIcon.png" class="circleImage">
