--- a/indigoDottybackFishDetail.html
+++ b/indigoDottybackFishDetail.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/indigoDottybackFishBanner.JPG">
+            <img id="detailBanner" src="images/indigoDottybackFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Indigo Dottyback Fish</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/indigoDottybackFishIcon.png" class="circleImage">
