--- a/stripedBlennyFishDetail.html
+++ b/stripedBlennyFishDetail.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="https://cdn.theatlantic.com/thumbor/cE9W6XBmyMfXOaHAs_dMYWVtZrI=/0x100:3456x2044/960x540/media/img/2014/05/shutterstock_141051217/original.jpg">
+            <img id="detailBanner" src="/images/blueTangFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Clown Fish</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/clownFishIcon.png" class="circleImage">
