--- a/clownFishDetail.html
+++ b/clownFishDetail.html
@@ -23,7 +23,7 @@
             Scientific Name: Amphiprion percula<br>
             Adult Size: 3 inches<br>
             Habitat: Indian, Pacific Oceans, Red Sea<br>
-            Behavior: Semi-Agressive<br>
+            Behavior: Semi-Agressive like Jorge and Oliver<br>
             Lifespan: 3-6 years<br>
             Diet: Omnivore<br>
             Reproduction: External Fertilization and are all born male <br>
