--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="mainTitle">St. John's Fish Tank</h1>
 
         <!-- Layton addition-->
-        <h2 class="subTitle"> Please click on an image of a fish to learn more about it </h2>
+        <h2 class="subTitle"> Test Test Test - Please click on an image of a fish to learn more about it </h2>
 
 
         <a href="clownFishDetail.html">
