--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <link rel="manifest" href="manifest.json">
+        <script src="swim.js"></script>
     </head>
 
     <body class="index" style="background-image: url('images/oceanBg.jpg');">
