Update blue tang fish image source

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div id="aquarium">
               <img src="images/clownFishIcon.png" class="fish" id="clownFish">
-              <img src="images/clownFishIcon.png" class="fish" id="blueTangFish">
+              <img src="images/blueTangFishIcon.png" class="fish" id="blueTangFish">
                   <!-- more fish -->
         </div> 
         <a href="clownFishDetail.html">
