Make fish images clickable with detail links
Updated fish images to be clickable links that lead to their respective detail pages.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h2 class="subTitle"> Please click on an image of a fish to learn more about it </h2>
 
         <div id="aquarium">
-              <img src="images/clownFishIcon.png" class="fish" id="clownFish">
-              <img src="images/blueTangFishIcon.png" class="fish" id="blueTangFish">
+             <a href="clownFishDetail.html"> <img src="images/clownFishIcon.png" class="fish" id="clownFish"></a>
+             <a href="blueTangFishDetail.html"> <img src="images/blueTangFishIcon.png" class="fish" id="blueTangFish"></a>
                   <!-- more fish -->
         </div> 
         <a href="clownFishDetail.html">
