Update titles in index.html for aquarium theme

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <body class="index" style="background-image: url('images/oceanBg.jpg');">
         
-        <h1 class="mainTitle">St. John's Fish Tank</h1>
-        <h2 class="subTitle"> Please click on an image of a fish to learn more about it </h2>
+        <h1 class="mainTitle">The SJC Aquarium</h1>
+        <h2 class="subTitle"> Please click on an image to learn more about that aquatic creature. </h2>
 
         <div id="aquarium">
        
