--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
     </head>
 
-    <body class="index" style="background-image: url('images/oceanBg.jpg');">
+    <body class="index" class="bubbler-one-regular" style="background-image: url('images/oceanBg.jpg');">
         <script src="swim.js"></script>
         <h1 class="mainTitle">The SJC Aquarium</h1>
         <h2 class="subTitle"> Please click on an image to learn more about that aquatic creature. </h2>
