--- a/blackTangFishDetail.html
+++ b/blackTangFishDetail.html
@@ -11,16 +11,16 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/yellowTangFishBanner.jpg">
+            <img id="detailBanner" src="images/blackTangFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Yellow Tang Fish</h1>
+                <h1 id="detailTitle">Black Tang Fish</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/yellowTangFishIcon.png" class="circleImage">
                 <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/yellowtangfishmodel.glb" ar poster="images/yellowTangFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
                 <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
                 </div>
         <p class="description">
-            Common Name: Yellow Tang<br>
+            Common Name: Black Tang<br>
             Scientific Name: Zebrasoma flavescens<br>
             Adult Size: 8 inces, with males being larger than females<br>
             Habitat: Central and Western Pacific inshore coral reefs located around Hawaii<br>
