--- a/blackTangFishDetail.html
+++ b/blackTangFishDetail.html
@@ -28,7 +28,7 @@
             Lifespan: 10-30 years<br>
             Diet: Omnivore; algae and zooplankton<br>
             Reproduction: External fertilization and scatter eggs<br>
-            Cool Facts: At night they turn grey-yellow with a white lateral line along the side<br>
+            Cool Facts: The black tang is considered a rarity because it is only collected from a few specific locations, such as Christmas Island in the South Pacific<br>
             Other Names: Yellow Sailfin Tang, Somber Surgeonfish, Lemon Sailfin<br>
         </p>
     </body>
