--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <img class="icon" src="images/blueTangFishIcon.png" id="blueTangFish">
         </a>
 
-        <a href="yellowTangFishDetail.html">
-        <img class="icon" src="images/yellowTangFishIcon.png" id="yellowTangFish">
+        <a href="blackTangFishDetail.html">
+        <img class="icon" src="images/blackTangFishIcon.png" id="yellowTangFish">
         </a>
 
         <a href="bicolorFoxface.html">
