--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </a>
 
         <a href="blackTangFishDetail.html">
-        <img class="icon" src="images/blackTangFishIcon.png" id="yellowTangFish">
+        <img class="icon" src="blackTangFishIcon.png" id="yellowTangFish">
         </a>
 
         <a href="bicolorFoxface.html">
