--- a/blackTangFishDetail.html
+++ b/blackTangFishDetail.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="blackTangFishBanner.jpg">
+            <img id="detailBanner" src="images/blackTangFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Black Tang Fish</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/yellowTangFishIcon.png" class="circleImage">
