--- a/blackTangFishDetail.html
+++ b/blackTangFishDetail.html
@@ -29,7 +29,7 @@
             Diet: Omnivore; algae and zooplankton<br>
             Reproduction: External fertilization and scatter eggs<br>
             Cool Facts: The black tang is considered a rarity because it is only collected from a few specific locations, such as Christmas Island in the South Pacific<br>
-            Other Names: Yellow Sailfin Tang, Somber Surgeonfish, Lemon Sailfin<br>
+            Other Names: Black Longnose Tang, Longnose Surgeonfish, or Black Sailfin Tang<br>
         </p>
     </body>
 </html>
