--- a/clownFishDetail.html
+++ b/clownFishDetail.html
@@ -23,11 +23,11 @@
             Scientific Name: Amphiprion percula<br>
             Adult Size: 3 inches<br>
             Habitat: Indian, Pacific Oceans, Red Sea<br>
-            Behavior: Semi-Agressive like Jorge and Oliver<br>
+            Behavior: Semi-Agressive<br>
             Lifespan: 3-6 years<br>
             Diet: Omnivore<br>
             Reproduction: External Fertilization and are all born male <br>
-            Cool Facts: Can change sex<br>
+            Cool Facts: Can change physiology<br>
             Other names: Anemone fish        
         </p>
     </body>
