--- a/seaCucumberDetail.html
+++ b/seaCucumberDetail.html
@@ -20,16 +20,16 @@
                 <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
                 </div>
         <p class="description">
-            Common Name: Black Tang<br>
-            Scientific Name: Zebrasoma flavescens<br>
-            Adult Size: 8 inces, with males being larger than females<br>
-            Habitat: Central and Western Pacific inshore coral reefs located around Hawaii<br>
-            Behavior: Diurnal (active during the day)with adults living in loose groups, while juveniles are territorial<br>
-            Lifespan: 10-30 years<br>
-            Diet: Omnivore; algae and zooplankton<br>
-            Reproduction: External fertilization and scatter eggs<br>
-            Cool Facts: The black tang is considered a rarity because it is only collected from a few specific locations, such as Christmas Island in the South Pacific<br>
-            Other Names: Black Longnose Tang, Longnose Surgeonfish, or Black Sailfin Tang<br>
+            Common Name: Sea Cucumber<br>
+            Scientific Name: Holothuroidea<br>
+            Adult Size: 1in - 6ft<br>
+            Habitat: Found worldwide in sand, mud, rocks, and coral<br>
+            Behavior: Feeds by sifting sediment of filtering passing food and nocturnal foraging<br>
+            Lifespan: 5 - 10 years<br>
+            Diet: plankton, algae, bacteria<br>
+            Reproduction: Can produce sexually through broadcast spawning and asexually through fission<br>
+            Cool Facts: Defends itself by expelling its internal organs which it grows back later<br>
+            Other Names: Sea pickles or sea slugs<br>
         </p>
     </body>
 </html>
