--- a/SerpentSeaStarDetail.html
+++ b/SerpentSeaStarDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blue Tang Fish</title>
+        <title>Serpent Sea Star</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
 
@@ -20,16 +20,16 @@
                 <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
                 </div>
         <p class="description">
-            Common Name: Blue Hippo Tang<br>
-            Scientific Name: Paracanthurus hepatus<br>
-            Adult Size: 12 inches<br>
-            Habitat: Indo-Pacific<br>
-            Behavior: Semi-aggressive<br>
-            Lifespan: 5 years<br>
-            Diet: Herbivore<br>
-            Reproduction: External fertilization and scatter eggs<br>
-            Cool Facts: Dory from finding Nemo!<br>
-            Other Names: Regal Tang<br>
+            Common Name: Brittle Star<br>
+            Scientific Name: Ophiuroidea<br>
+            Adult Size: 6 inches to over a foot in diameter<br>
+            Habitat: Shallow intertidal zones to deep-sea coral reefs<br>
+            Behavior: Solitary<br>
+            Lifespan: 3-5 years<br>
+            Diet: Small organisms<br>
+            Reproduction: Sexual and asexual methods<br>
+            Cool Facts: Can regenerate lost limbs<br>
+            Other Names: serpent stars or serpent starfish<br>
         </p>
     </body>
 </html>
