--- a/seaCucumberDetail.html
+++ b/seaCucumberDetail.html
@@ -11,9 +11,9 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/blackTangFishBanner.jpg">
+            <img id="detailBanner" src="sea-cucumber_8.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Black Tang Fish</h1>
+                <h1 id="detailTitle">Sea Cucumber</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/blackTangFishIcon.png" class="circleImage">
                 <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/yellowtangfishmodel.glb" ar poster="images/yellowTangFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
