--- a/SerpentSeaStarDetail.html
+++ b/SerpentSeaStarDetail.html
@@ -11,9 +11,9 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="images/blueTangFishBanner.jpg">
+            <img id="detailBanner" src="serpent sea star.webp">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Blue Hippo Tang Fish</h1>
+                <h1 id="detailTitle">Serpent Sea Star</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="images/blueTangFishIcon.png" class="circleImage">
                 <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/blueTangFishModel.glb" ar poster="images/blueTangFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
