--- a/seaCucumberDetail.html
+++ b/seaCucumberDetail.html
@@ -14,8 +14,8 @@
             <img id="detailBanner" src="sea-cucumber_8.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Sea Cucumber</h1>
-                <img id="fishImg" ondblclick="toggle3d()" src="images/blackTangFishIcon.png" class="circleImage">
-                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/yellowtangfishmodel.glb" ar poster="images/yellowTangFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+                <img id="fishImg" ondblclick="toggle3d()" src="sea-cucumber_8 - Edited.png" class="circleImage">
+                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/yellowtangfishmodel.glb" ar poster="sea-cucumber_8 - Edited.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
                 <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
                 </div>
