--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
         <a href="indigoDottybackFishDetail.html">
         <img class ="icon" src="images/indigoDottybackFishIcon.png" id="indigoDottybackFish">
         </a>
+            
         <a href="seaCucumberDetail.html">
-        <img class ="icon" src="sea-cucumber_8 - Edited.png" id="indigoDottybackFish">
+        <img class ="icon" src="sea-cucumber_8 - Edited.png" id="seaCucumber">
         </a>
  </div> 
          <script src="swim.js"></script>
