Add link and image for blue Caribbean fish

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <a href="seaCucumberDetail.html">
         <img class ="icon" src="sea-cucumber_8 - Edited.png" id="seaCucumber">
         </a>
+
+        <a href="blueCaribbeanFishDetail.html">
+        <img class ="icon" src="sea-cucumber_8 - Edited.png" id="blueCaribbeanFish">
+        </a>
  </div> 
          <script src="swim.js"></script>
     </body>
