--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         <a href="blueCaribbeanFishDetail.html">
         <img class ="icon" src="sea-cucumber_8 - Edited.png" id="blueCaribbeanFish">
         </a>
+
+        <a href="SerpentSeaStarDetail.html">
+        <img class ="icon" src="seaStar.png" id="serpentSeaStar">
+        </a>
  </div> 
          <script src="swim.js"></script>
     </body>
