Update image source for blue Caribbean fish

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </a>
 
         <a href="blueCaribbeanFishDetail.html">
-        <img class ="icon" src="sea-cucumber_8 - Edited.png" id="blueCaribbeanFish">
+        <img class ="icon" src="acanthurus-coeruleus-e2fc9ab1cf0d426ebe87d8da72c07791 - Edited.png" id="blueCaribbeanFish">
         </a>
 
         <a href="SerpentSeaStarDetail.html">
