--- a/blueCaribbeanFishDetail.html
+++ b/blueCaribbeanFishDetail.html
@@ -13,7 +13,7 @@
         <div class="container">
             <img id="detailBanner" src="Untitled design.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Black Tang Fish</h1>
+                <h1 id="detailTitle">Blue Caribbean Tang</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="acanthurus-coeruleus-e2fc9ab1cf0d426ebe87d8da72c07791 - Edited.png" class="circleImage">
                 <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/yellowtangfishmodel.glb" ar poster="images/yellowTangFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
