--- a/blueCaribbeanFishDetail.html
+++ b/blueCaribbeanFishDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blue Tang Fish</title>
+        <title>Blue Caribbean Tang</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
 
