--- a/DisparAnthiasDetail.html
+++ b/DisparAnthiasDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Serpent Sea Star</title>
+        <title>Dispar Anthias</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
 
@@ -13,23 +13,23 @@
         <div class="container">
             <img id="detailBanner" src="serpent sea star.webp">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
-                <h1 id="detailTitle">Serpent Sea Star</h1>
+                <h1 id="detailTitle">Dispar Anthias</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="seaStar.png" class="circleImage">
                 <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/blueTangFishModel.glb" ar poster="seaStar.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
                 <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
                 </div>
         <p class="description">
-            Common Name: Brittle Star<br>
-            Scientific Name: Ophiuroidea<br>
-            Adult Size: 6 inches to over a foot in diameter<br>
-            Habitat: Shallow intertidal zones to deep-sea coral reefs<br>
-            Behavior: Solitary<br>
-            Lifespan: 3-5 years<br>
-            Diet: Small organisms<br>
-            Reproduction: Sexual and asexual methods<br>
-            Cool Facts: Can regenerate lost limbs<br>
-            Other Names: serpent stars or serpent starfish<br>
+            Common Name: Redfin Anthias, Peach Anthias, and Madder Seaperch<br>
+            Scientific Name: Pseudanthias dispar<br>
+            Adult Size: 3-4 inches<br>
+            Habitat: western Pacific Ocean and Indo-Pacific coral reefs<br>
+            Behavior: peaceful but can be aggressive towards each other<br>
+            Lifespan: 5-8 years<br>
+            Diet: Shrimp<br>
+            Reproduction: Release their eggs and sperm into the open water column<br>
+            Cool Facts: Ability to change sex<br>
+            Other Names: Orange Anthias or Peach Fairy Basslet<br>
         </p>
     </body>
 </html>
