--- a/DisparAnthiasDetail.html
+++ b/DisparAnthiasDetail.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="serpent sea star.webp">
+            <img id="detailBanner" src="Pseudanthias-dispar.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Dispar Anthias</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="seaStar.png" class="circleImage">
