--- a/DisparAnthiasDetail.html
+++ b/DisparAnthiasDetail.html
@@ -14,8 +14,8 @@
             <img id="detailBanner" src="Pseudanthias-dispar.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Dispar Anthias</h1>
-                <img id="fishImg" ondblclick="toggle3d()" src="seaStar.png" class="circleImage">
-                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/blueTangFishModel.glb" ar poster="seaStar.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+                <img id="fishImg" ondblclick="toggle3d()" src="disparAnthias.png" class="circleImage">
+                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/blueTangFishModel.glb" ar poster="disparAnthias.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
                 <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
                 </div>
