--- a/blackLong-spinedUrchin.Detail.html
+++ b/blackLong-spinedUrchin.Detail.html
@@ -11,7 +11,7 @@
 
     <body class="detail">
         <div class="container">
-            <img id="detailBanner" src="sea-cucumber_8.jpg">
+            <img id="detailBanner" src="dd4.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Black Long-spined Urchin</h1>
                 <img id="fishImg" ondblclick="toggle3d()" src="sea-cucumber_8 - Edited.png" class="circleImage">
