--- a/blackLong-spinedUrchin.Detail.html
+++ b/blackLong-spinedUrchin.Detail.html
@@ -14,8 +14,8 @@
             <img id="detailBanner" src="dd4.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Black Long-spined Urchin</h1>
-                <img id="fishImg" ondblclick="toggle3d()" src="sea-cucumber_8 - Edited.png" class="circleImage">
-                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="3dpea.com_sea-cucumber_8 - Edited.glb" ar poster="sea-cucumber_8 - Edited.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+                <img id="fishImg" ondblclick="toggle3d()" src="6caaeb58-5679-4a68-9304-82b85da01ca0.png" class="circleImage">
+                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="3dpea.com_sea-cucumber_8 - Edited.glb" ar poster="6caaeb58-5679-4a68-9304-82b85da01ca0.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
                 <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
                 <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
                 </div>
