--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <a href="SerpentSeaStarDetail.html">
         <img class ="icon" src="seaStar.png" id="serpentSeaStar">
         </a>
+
+        <a href="DisparAnthiasDetail.html">
+        <img class ="icon" src="disparAnthias.png" id="disparAnthias">
+        </a>
  </div> 
          <script src="swim.js"></script>
     </body>
