--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
         <a href="DisparAnthiasDetail.html">
         <img class ="icon" src="disparAnthias.png" id="disparAnthias">
         </a>
+            
+        <a href="blackLong-spinedUrchinDeatail.html">
+        <img class ="icon" src="" id="blackLong-spinedUrchin">
+        </a>
  </div> 
          <script src="swim.js"></script>
     </body>
