--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </a>
             
         <a href="blackLong-spinedUrchinDeatail.html">
-        <img class ="icon" src="" id="blackLong-spinedUrchin">
+        <img class ="icon" src="6caaeb58-5679-4a68-9304-82b85da01ca0.png" id="blackLong-spinedUrchin">
         </a>
  </div> 
          <script src="swim.js"></script>
