--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img class ="icon" src="disparAnthias.png" id="disparAnthias">
         </a>
             
-        <a href="blackLong-spinedUrchinDetail.html">
+        <a href="blackLong-spinedUrchin.Detail.html">
         <img class ="icon" src="6caaeb58-5679-4a68-9304-82b85da01ca0.png" id="blackLong-spinedUrchin">
         </a>
  </div> 
