--- a/yellowTangFishDetail.html
+++ b/yellowTangFishDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blue Tang Fish</title>
+        <title>Yellow Tang Fish</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
 
@@ -14,10 +14,7 @@
             <img id="detailBanner" src="images/yellowTangFishBanner.jpg">
                 <a href="index.html" id="backBtn"><img src="images/chevronBackSymbol.png"></a>
                 <h1 id="detailTitle">Yellow Tang Fish</h1>
-                <img id="fishImg" ondblclick="toggle3d()" src="images/yellowTangFishIcon.png" class="circleImage">
-                <model-viewer id="fishModel" ondblclick="toggle3d()" class="circleImage" alt="" src="models/yellowtangfishmodel.glb" ar poster="images/yellowTangFishIcon.png" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
-                <img class="scaleBtn" src="images/growShrinkSymbol.png" onclick="scale()">
-                <h3 id="modelMessage" class="modelMessage">Double Click Window to Toggle 3D Viewing Mode</h3>
+                
                 </div>
         <p class="description">
             Common Name: Yellow Tang<br>
