--- a/orchidDottybackFishDetail.html
+++ b/orchidDottybackFishDetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <title>Orchid Dottyback</title>
@@ -29,4 +29,38 @@
             Other names: Fridman's Dottyback   
         </p>
     </body>
+</html>-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Orchid Dottyback</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="images/orchidDottybackFish.png" alt="Orchid Dottyback" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Orchid Dottyback</h1>
+            <p><strong>Scientific Name:</strong> Pseudochromis fridmani</p>
+            <p><strong>Habitat:</strong> Coral reefs of the Red Sea</p>
+            <p><strong>Diet:</strong> Carnivorous</p>
+            <p><strong>Size:</strong> Up to 3 inches</p>
+
+
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
 </html>
+
