Update fish image to use banner version

--- a/orchidDottybackFishDetail.html
+++ b/orchidDottybackFishDetail.html
@@ -44,7 +44,7 @@
 
         <!-- Left side: fish image -->
         <div class="fish-image-container">
-            <img src="images/orchidDottybackFish.png" alt="Orchid Dottyback" class="fish-image">
+            <img src="images/orchidDottybackFishBanner.jpg" alt="Orchid Dottyback" class="fish-image">
         </div>
 
         <!-- Right side: information and 3D model -->
