Fix stylesheet link in orchidDottybackFishDetail.html

--- a/orchidDottybackFishDetail.html
+++ b/orchidDottybackFishDetail.html
@@ -36,7 +36,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Orchid Dottyback</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="detail">
     <!-- Page container -->
