Add detailed information for Dispar Anthias

--- a/DisparAnthiasDetail.html
+++ b/DisparAnthiasDetail.html
@@ -30,3 +30,41 @@
         </p>
     </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Dispar Anthias</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="Pseudanthias-dispar.jpg" alt="Dispar Anthias" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Dispar Anthias</h1>
+            <p><strong>Common Name:</strong> Redfin Anthias, Peach Anthias, and Madder Seaperch</p>
+            <p><strong>Scientific Name:</strong> Pseudanthias dispar</p>
+            <p><strong>Other Names:</strong> Orange Anthias or Peach Fairy Basslet</p>
+            <p><strong>Habitat:</strong> Western Pacific Ocean and Indo-Pacific coral reefs</p>
+            <p><strong>Diet:</strong> Shrimp</p>
+            <p><strong>Size:</strong> 3-4 inches</p>
+            <p><strong>Behavior:</strong> peaceful but can be aggressive towards each other</p>
+            <p><strong>Lifespan:</strong> 5-8 years</p>
+            <p><strong>Reproduction:</strong> Release their eggs and sperm into the open water colum</p>
+            <p><strong>Cool Facts:</strong> Ability to change sex</p>
+
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
+</html>
