--- a/DisparAnthiasDetail.html
+++ b/DisparAnthiasDetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
         <title>Dispar Anthias</title>
@@ -30,7 +30,7 @@
         </p>
     </body>
 </html>
-
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
