--- a/SerpentSeaStarDetail.html
+++ b/SerpentSeaStarDetail.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
     <head>
@@ -29,4 +30,45 @@
             Other Names: serpent stars or serpent starfish<br>
         </p>
     </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Serpent Sea Star</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="serpent sea star.webp" alt="fishName" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Serpent Sea Star</h1>
+            <p><strong>Common Name: </strong>Brittle Star</p>
+            <p><strong>Scientific Name: </strong>Ophiuroidea</p>
+            <p><strong>Adult Size: </strong>6 inches to over a foot in diameter</p>
+            <p><strong>Habitat: </strong>Shallow intertidal zones to deep-sea coral reefs</p>
+            <p><strong>Behavior: </strong>Solitary</p>
+            <p><strong>Lifespan: </strong>3-5 years</p>
+            <p><strong>Diet: </strong>Small organisms</p>
+            <p><strong>Reproduction: </strong>Sexual and asexual methods</p>
+            <p><strong>Cool Facts: </strong>Can regenerate lost limbs</p>
+            <p><strong>Other Names: </strong>Serpent stars or serpent starfish</p>
+        
+
+
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
 </html>
