--- a/astraeaTurboSnailDetail.html
+++ b/astraeaTurboSnailDetail.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
     <head>
@@ -29,4 +30,45 @@
             Other names: Star Snail, Conehead Snail      
         </p>
     </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Astraea Turbo Snail</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="images/astraeaTurboSnailBanner.jpg" alt="fishName" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Astraea Turbo Snail</h1>
+            <p><strong>Common Name: </strong>Astraea Turbo Snail</p>
+            <p><strong>Scientific Name: </strong> Astraea tecta</p>
+            <p><strong>Adult Size: </strong>0.5-1.0 inch</p>
+            <p><strong>Habitat: </strong>Tropical areas in the Atlantic Ocean</p>
+            <p><strong>Behavior: </strong>Nocturnal (active at night), peaceful grazer</p>
+            <p><strong>Lifespan: </strong>1-2 years</p>
+            <p><strong>Diet: </strong>Herbivore; algae</p>
+            <p><strong>Reproduction: </strong>Has difficulty righting itself due to the shape of its shell</p>
+            <p><strong>Cool Facts: </strong>Can change sex</p>
+            <p><strong>Other Names: </strong>Star Snail, Conehead Snail </p>
+        
+
+
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
 </html>
