--- a/blackLongspinedUrchin.Detail.html
+++ b/blackLongspinedUrchin.Detail.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
     <head>
@@ -29,4 +30,43 @@
             Other Names: long-spined sea urchin, banded diadem, or lime urchin<br>
         </p>
     </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Black Long-spined Urchin</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="detail">
+    <!-- Page container -->
+    <div class="fish-detail-container">
+
+        <!-- Left side: fish image -->
+        <div class="fish-image-container">
+            <img src="dd4.png" alt="fishName" class="fish-image">
+        </div>
+
+        <!-- Right side: information and 3D model -->
+        <div class="fish-info">
+            <h1>Black Long-spined Urchin</h1>
+            <p><strong>Common Name: </strong>Black Long-spined Urchin</p>
+            <p><strong>Scientific Name: </strong>Diadema antillarum</p>
+            <p><strong>Adult Size: </strong>2in - 4in</p>
+            <p><strong>Habitat: </strong>Tropical and subtropical marine environments in all three major oceans, primarily on coral reefs and rocky seabeds</p>
+            <p><strong>Lifespan: </strong>4 - 10 years</p>
+            <p><strong>Diet: </strong>algae and seaweed</p>
+            <p><strong>Reproduction: </strong>broadcast spawning</p>
+            <p><strong>Cool Facts: </strong>its spines contain an irritant toxin</p>
+            <p><strong>Other Names: </strong>long-spined sea urchin, banded diadem, or lime urchin</p>
+
+
+            <!-- Optional back button -->
+            <a id="backBtn" href="index.html">&#8592; Back</a>
+        </div>
+
+    </div>
+</body>
 </html>
